New Product Class Created...7 New Test has been added at 9.50 am at 29th Aug

--- a/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-not-run.html
+++ b/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-not-run.html
@@ -1,44 +1,8 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserButtonText</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputPlaceholder</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testGender</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserButtonIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testPlanValidity</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testLastUpdate</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserAddress</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testCreatedAt</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testDeleteButtonIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testNumberOfChildren</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testBudget</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserButtonClick</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testNumberOfAdults</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputIsEnabled</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testPreferredFood</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testCreatedAtt</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserTableIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserSubscription</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserMobileNumberIsCorrect</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputCssClass</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserSubscriptionStatusIsCorrect</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testLikeCooking</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserButtonFontWeight</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserName</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testDietType</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserAddressIsCorrect</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testHoursSpentOnCooking</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserProfileImageIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testOnDiet</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testProfileImage</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputDefaultValue</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserMobileNo</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputType</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testEditButtonIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputPresence</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserNameIsCorrect</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testNumberOfUsersDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testSearchInputIsDisplayed</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserEmailIsCorrect</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testUserEmail</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testFamilyOnDiet</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.User.testAge</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputField</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputFieldFunctionality</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchBoxVisibility</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputFieldInitialValue</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputFieldType</td></tr>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testProductsHeaderVisibility</td></tr>
 </table>
