--- a/GroceryTrackerAdminPanel/test-output/old/Default suite/methods.html
+++ b/GroceryTrackerAdminPanel/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcd46d">  <td>24/08/28 22:37:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User.EditUserDetail1()[pri:43, instance:saurabhkumbhar.GroceryTrackerAdminPanel.User@5bda80bf]">EditUserDetail1</td> 
+<tr bgcolor="fd91c9">  <td>24/08/29 09:47:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Products.setUp()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@4e76dac]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
+<tr bgcolor="fd91c9">  <td>24/08/29 09:47:29</td>   <td>7059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Products.teardown()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@4e76dac]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
+<tr bgcolor="fd91c9">  <td>24/08/29 09:47:28</td>   <td>6623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Products.testSearchButtonVisibility()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@4e76dac]">testSearchButtonVisibility</td> 
   <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="fcd46d">  <td>24/08/28 22:37:25</td>   <td>-5005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User.setUp()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.User@5bda80bf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="fcd46d">  <td>24/08/28 22:38:25</td>   <td>54976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;User.teardown()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.User@5bda80bf]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
 </table>
