New changes in Product Class

--- a/GroceryTrackerAdminPanel/test-output/old/Default suite/classes.html
+++ b/GroceryTrackerAdminPanel/test-output/old/Default suite/classes.html
@@ -19,11 +19,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSearchInputField</td>
+<td>testSuccessButtonClick</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSearchInputFieldType</td>
+<td>testSearchInputField</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -31,11 +31,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testSearchInputFieldType</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testProductsHeaderVisibility</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testTablePresence</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testSearchInputFieldInitialValue</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDangerButtonClick</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
