--- a/GroceryTrackerAdminPanel/test-output/index.html
+++ b/GroceryTrackerAdminPanel/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--224513951\testng-customsuite.xml</span>
+                    <span>C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1621977796\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="saurabhkumbhar.GroceryTrackerAdminPanel.Products" class="method navigator-link" hash-for-method="testSearchButtonVisibility">testSearchButtonVisibility</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="saurabhkumbhar.GroceryTrackerAdminPanel.Products" class="method navigator-link" hash-for-method="testSuccessButtonClick">testSuccessButtonClick</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchButtonVisibility">
-                  </a> <!-- testSearchButtonVisibility -->
-                  <span class="method-name">testSearchButtonVisibility</span>
+                  <a name="testSuccessButtonClick">
+                  </a> <!-- testSuccessButtonClick -->
+                  <span class="method-name">testSuccessButtonClick</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--224513951\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SAURABH\AppData\Local\Temp\testng-eclipse--1621977796\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;saurabhkumbhar.GroceryTrackerAdminPanel.Products&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;testSearchButtonVisibility&quot;/&gt;
+          &lt;include name=&quot;testSuccessButtonClick&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- saurabhkumbhar.GroceryTrackerAdminPanel.Products --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSearchButtonVisibility')
+data.setCell(0, 1, 'testSuccessButtonClick')
 data.setCell(0, 2, 'saurabhkumbhar.GroceryTrackerAdminPanel.Products')
-data.setCell(0, 3, 426);
+data.setCell(0, 3, 3481);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 426 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,21 +213,27 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">9 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">saurabhkumbhar.GroceryTrackerAdminPanel.Products</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">testSearchInputField</span>
-                <br/>
-                <span class="ignored-method-name">testSearchInputFieldFunctionality</span>
+                <span class="ignored-method-name">testDangerButtonClick</span>
                 <br/>
                 <span class="ignored-method-name">testSearchBoxVisibility</span>
+                <br/>
+                <span class="ignored-method-name">testSearchInputField</span>
+                <br/>
+                <span class="ignored-method-name">testTablePresence</span>
                 <br/>
                 <span class="ignored-method-name">testSearchInputFieldInitialValue</span>
                 <br/>
                 <span class="ignored-method-name">testSearchInputFieldType</span>
+                <br/>
+                <span class="ignored-method-name">testSearchButtonVisibility</span>
+                <br/>
+                <span class="ignored-method-name">testSearchInputFieldFunctionality</span>
                 <br/>
                 <span class="ignored-method-name">testProductsHeaderVisibility</span>
                 <br/>
@@ -247,12 +253,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testSearchButtonVisibility</span>
-                <span class="method-start">6635 ms</span>
+                <span class="method-name">testSuccessButtonClick</span>
+                <span class="method-start">6884 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">7070 ms</span>
+                <span class="method-start">10372 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
