--- a/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-not-run.html
+++ b/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSuccessButtonClick</td></tr>
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testDangerButtonClick</td></tr>
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchBoxVisibility</td></tr>
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputField</td></tr>
@@ -7,5 +8,4 @@
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputFieldType</td></tr>
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchButtonVisibility</td></tr>
 <tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testSearchInputFieldFunctionality</td></tr>
-<tr><td>saurabhkumbhar.GroceryTrackerAdminPanel.Products.testProductsHeaderVisibility</td></tr>
 </table>
