--- a/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-alphabetical.html
+++ b/GroceryTrackerAdminPanel/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fd91c9">  <td>24/08/29 10:12:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Products.setUp()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">&gt;&gt;setUp</td> 
+<tr bgcolor="fd91c9">  <td>24/08/29 14:38:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Products.setUp()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="fd91c9">  <td>24/08/29 10:12:50</td>   <td>10368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Products.teardown()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">&lt;&lt;teardown</td> 
+<tr bgcolor="fd91c9">  <td>24/08/29 14:38:11</td>   <td>5414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Products.teardown()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="fd91c9">  <td>24/08/29 10:12:47</td>   <td>6879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Products.testSuccessButtonClick()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">testSuccessButtonClick</td> 
+<tr bgcolor="fd91c9">  <td>24/08/29 14:38:10</td>   <td>4993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Products.testProductsHeaderVisibility()[pri:0, instance:saurabhkumbhar.GroceryTrackerAdminPanel.Products@5d465e4b]">testProductsHeaderVisibility</td> 
   <td>main@1283928880</td>   <td></td> </tr>
 </table>
